--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -62,7 +62,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr *ngFor="let item of dataSource.DBRIncomeList">
+                    <tr *ngFor="let item of dataSourcee.DBRIncomeList">
                         <td class="col-lg-9">{{item.ItemName}}</td>
                         <td class="col-lg-3">
                             <form class="kt-form kt-form--group-seperator-dashed">
@@ -92,7 +92,7 @@
                     </thead>
                     <tbody>
                     <!--<form class="kt-form kt-form--group-seperator-dashed">-->
-                    <tr *ngFor="let liab of dataSource.DBRLiabilitiesList">
+                    <tr *ngFor="let liab of dataSourcee.DBRLiabilitiesList">
                         <td class="col-lg-9">{{liab.ItemName}}</td>
                         <td class="col-lg-3">
                             <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -137,23 +137,24 @@
                 </div>
 
 
-                <div class="row">
-                    <div class="col-lg-12 mt-1p ml-1p mb-1p">
-                        <button type="button" *ngIf="!isReadOnly" (click)="saveLoanDbr()" class="btn btn-primary bg-green" mat-raised-button
-                                color="primary">
-                            <mat-icon class="mr-2">save</mat-icon>
-                            Save & Submit DBR
-                        </button>
-                        <button *ngIf="!isReadOnly && !checkk" type="button"
-                                class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                mat-raised-button color="danger">
-                            <mat-icon class="mr-2">cancel</mat-icon>
-                            Close
-                        </button>
-                    </div>
-                </div>
+
             </div>
 
+        </div>
+        <div class="row">
+            <div class="col-lg-12 mt-1p ml-1p mb-1p">
+                <button type="button" *ngIf="!isReadOnly" (click)="saveLoanDbr()" class="btn btn-primary bg-green" mat-raised-button
+                        color="primary">
+                    <mat-icon class="mr-2">save</mat-icon>
+                    Save & Submit DBR
+                </button>
+                <button *ngIf="!isReadOnly && !checkk" type="button"
+                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                        mat-raised-button color="danger">
+                    <mat-icon class="mr-2">cancel</mat-icon>
+                    Close
+                </button>
+            </div>
         </div>
 
     </div>
