--- a/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
+++ b/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
@@ -76,15 +76,15 @@
                 matSortDirection="asc"
                 matSortDisableClear
             >
-                <ng-container matColumnDef="GL">
-                    <mat-header-cell *matHeaderCellDef
-                    >GL Code
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.GlCode
-                        }}</mat-cell>
-                </ng-container>
+<!--                <ng-container matColumnDef="GL">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >GL Code-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report">{{-->
+<!--                        report.GlCode-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
 
                 <ng-container matColumnDef="Zone">
                     <mat-header-cell *matHeaderCellDef
@@ -116,25 +116,25 @@
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="PD">
-                    <mat-header-cell *matHeaderCellDef
-                    >Past Due
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.PastDueAmount
-                        }}</mat-cell>
-                </ng-container>
+<!--                <ng-container matColumnDef="PD">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Past Due-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report">{{-->
+<!--                        report.PastDueAmount-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
 
-                <ng-container matColumnDef="CD">
-                    <mat-header-cell *matHeaderCellDef
-                    >Current Due
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.CurrentDueAmount
-                        }}</mat-cell>
-                </ng-container>
+<!--                <ng-container matColumnDef="CD">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Current Due-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report">{{-->
+<!--                        report.CurrentDueAmount-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
 
                 <ng-container matColumnDef="Ndd">
                     <mat-header-cell *matHeaderCellDef
@@ -207,15 +207,15 @@
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="descr">
-                    <mat-header-cell *matHeaderCellDef
-                    >DESCR
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.DESCR
-                        }}</mat-cell>
-                </ng-container>
+<!--                <ng-container matColumnDef="descr">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >DESCR-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report">{{-->
+<!--                        report.DESCR-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
 
 
                 <ng-container matColumnDef="Los">
