--- a/src/app/modules/journal-voucher/search-jv/search-jv.component.html
+++ b/src/app/modules/journal-voucher/search-jv/search-jv.component.html
@@ -77,7 +77,7 @@
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>Select Status</mat-label>
-                                <mat-select (selectionChange)="onselectionChange($event)" formControlName="Status">
+                                <mat-select formControlName="Status">
                                     <mat-option *ngFor="let status of JvStatuses" [value]="status.Value">
                                         {{status.Name}}
                                     </mat-option>
@@ -137,18 +137,18 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Transaction Master</mat-header-cell>
                     <mat-cell *matCellDef="let jvocher">{{jvocher.TrDesc}}</mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="Debit">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Debit</mat-header-cell>
-                    <mat-cell *matCellDef="let jvocher">{{jvocher.DrAmount}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Credit">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Credit</mat-header-cell>
-                    <mat-cell *matCellDef="let jvocher">{{jvocher.CrAmount}}</mat-cell>
-                </ng-container>
+<!--                <ng-container matColumnDef="Debit">-->
+<!--                    <mat-header-cell *matHeaderCellDef mat-sort-header>Debit</mat-header-cell>-->
+<!--                    <mat-cell *matCellDef="let jvocher">{{jvocher.DrAmount}}</mat-cell>-->
+<!--                </ng-container>-->
+<!--                <ng-container matColumnDef="Credit">-->
+<!--                    <mat-header-cell *matHeaderCellDef mat-sort-header>Credit</mat-header-cell>-->
+<!--                    <mat-cell *matCellDef="let jvocher">{{jvocher.CrAmount}}</mat-cell>-->
+<!--                </ng-container>-->
 
-                <ng-container *ngIf="statusAS" matColumnDef="Amount">
-                    <mat-header-cell *matHeaderCellDef  mat-sort-header>Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let jvocher">{{jvocher.Amount}}</mat-cell>
+                <ng-container matColumnDef="Amount">
+                    <mat-header-cell *matHeaderCellDef  mat-sort-header>Controlled Amount</mat-header-cell>
+                    <mat-cell *matCellDef="let jvocher">{{jvocher.ControlledAmount}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Status">
