--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -143,7 +143,7 @@
                                     <td>{{legal.RelationName}}</td>
                                     <td>
                                         <button type="button" class="btn btn-xs btn-primary"
-                                                (click)="onDeleteLegalHeirs(legal.UserID,i)">Delete
+                                                (click)="onDeleteLegalHeirs(legal.ID,i)">Delete
                                         </button>
                                     </td>
                                 </tr>
