--- a/src/app/modules/device-mapping/mapping-request/map-req-dialog/map-req-dialog.component.html
+++ b/src/app/modules/device-mapping/mapping-request/map-req-dialog/map-req-dialog.component.html
@@ -48,9 +48,10 @@
         <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No Record Found</div>
         <div class="mat-table__message" *ngIf="loading">Please wait....</div>
 
-        <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
-            Items per page:
-            <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+        <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
+                    <div class="font-bold text-green">Items per page:</div>
+
+            <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
                         style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
                 <mat-option [value]="5">5</mat-option>
                 <mat-option [value]="10">10</mat-option>
