--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -259,9 +259,11 @@
 
         </div>
     </div>
-    <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
-        Items per page:
+    <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
+                <div class="font-bold text-green">Items per page:</div>
+
         <mat-select
+        class="border-2 pl-1 py-2" 
             display="inline"
             [(value)]="itemsPerPage"
             (valueChange)="paginate(1, $event)"
