--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -442,7 +442,8 @@
         class="mat-select"
         style="padding: 5px"
     >
-        Items per page:
+                <div class="font-bold text-green">Items per page:</div>
+
         <mat-select
             display="inline"
             [(value)]="itemsPerPage"
