--- a/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
+++ b/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
@@ -167,10 +167,11 @@
                     </mat-table>
 <!--                    <div class="mat-table__message" *ngIf="dataSource.data.length==0">No records found</div>-->
                 </div>
-                <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+                <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
                     <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-                    Items per page:
-                    <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                            <div class="font-bold text-green">Items per page:</div>
+
+                    <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
                                 style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
                         <mat-option [value]="5">5</mat-option>
                         <mat-option [value]="10">10</mat-option>
