--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -168,10 +168,11 @@
         <div class="row py-2">
             <div class="col-lg-12">
 
-                <div class="mat-select" style="padding:5px;">
+                <div class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
                     <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-                    Items per page:
-                    <mat-select display="inline" [(value)]="pageSize" (valueChange)="paginateRequest(1,$event)"
+                            <div class="font-bold text-green">Items per page:</div>
+
+                    <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="pageSize" (valueChange)="paginateRequest(1,$event)"
                                 style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
                         <mat-option [value]="5">5</mat-option>
                         <mat-option [value]="10">10</mat-option>
@@ -227,10 +228,11 @@
 
         </div>
 
-        <div class="mat-select" style="padding:5px;">
+        <div class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
             <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-            Items per page:
-            <mat-select display="inline" [(value)]="pageSizePending" (valueChange)="paginatePending(1,$event)"
+                    <div class="font-bold text-green">Items per page:</div>
+
+            <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="pageSizePending" (valueChange)="paginatePending(1,$event)"
                         style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
                 <mat-option [value]="5">5</mat-option>
                 <mat-option [value]="10">10</mat-option>
