--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -279,7 +279,8 @@
             </div>
 
             <!-- <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
-                Items per page:
+                        <div class="font-bold text-green">Items per page:</div>
+
                 <mat-select
                     display="inline"
                     [(value)]="itemsPerPage"
