--- a/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
+++ b/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
@@ -10,8 +10,8 @@
                 </div>
 
                 <div class="col-lg-12 text-center">
-                    <span
-                        style="font-size: 24px !important; font-weight: 600 !important; color: #0f298f !important; text-align:center">{{data.title}}</span>
+                    <span class="text-green"
+                        style="font-size: 18px !important; font-weight: 600 !important; text-align:center">{{data.title}}</span>
                 </div>
                 <div class="col-lg-12 text-center  mt-1">
                     <span style="font-weight:500">{{data.description}}</span>
