--- a/src/app/shared/crud/alert-message/alert-message.component.html
+++ b/src/app/shared/crud/alert-message/alert-message.component.html
@@ -10,7 +10,7 @@
                 </div>
 
                 <div class="col-lg-12 text-center mt-3">
-                    <span style="font-weight:500" [innerHTML]="data.description"></span>
+                    <span class="text-red-500" style="font-weight:500 " [innerHTML]="data.description"></span>
                 </div>
             </div>
         </div>
