--- a/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
+++ b/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
@@ -299,7 +299,7 @@
             </div>
 
             <!-- <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
-                        <div class="font-bold text-green">Items per page:</div>
+                        <span class="font-bold text-green">Items per page:</span>
 
                 <mat-select
                     display="inline"
