--- a/src/app/modules/customer/eligibility-request/eligibility-request.component.html
+++ b/src/app/modules/customer/eligibility-request/eligibility-request.component.html
@@ -204,7 +204,7 @@
 
 
     <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
-                <div class="font-bold text-green">Items per page:</div>
+                <span class="font-bold text-green">Items per page:</span>
 
         <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
                     style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
