--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -260,7 +260,7 @@
         </div>
     </div>
     <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
-                <div class="font-bold text-green">Items per page:</div>
+                <span class="font-bold text-green">Items per page:</span>
 
         <mat-select
         class="border-2 pl-1 py-2" 
