--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -442,7 +442,7 @@
         class="mat-select"
         style="padding: 5px"
     >
-                <div class="font-bold text-green">Items per page:</div>
+                <span class="font-bold text-green">Items per page:</span>
 
         <mat-select
             display="inline"
