--- a/src/app/modules/notification/due-payments/due-payments.component.html
+++ b/src/app/modules/notification/due-payments/due-payments.component.html
@@ -151,7 +151,7 @@
             </div>
 
             <!-- <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
-                        <div class="font-bold text-green">Items per page:</div>
+                        <span class="font-bold text-green">Items per page:</span>
 
                 <mat-select
                     display="inline"
