--- a/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
+++ b/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
@@ -106,7 +106,7 @@
 
     </div>
     <div class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
-                <div class="font-bold text-green">Items per page:</div>
+                <span class="font-bold text-green">Items per page:</span>
 
         <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="items_per_page" (valueChange)="paginate(1,$event)"
                     style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
