--- a/src/app/modules/journal-voucher/search-jv/search-jv.component.html
+++ b/src/app/modules/journal-voucher/search-jv/search-jv.component.html
@@ -137,6 +137,7 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Transaction Master</mat-header-cell>
                     <mat-cell *matCellDef="let jvocher">{{jvocher.TrDesc}}</mat-cell>
                 </ng-container>
+
 <!--                <ng-container matColumnDef="Debit">-->
 <!--                    <mat-header-cell *matHeaderCellDef mat-sort-header>Debit</mat-header-cell>-->
 <!--                    <mat-cell *matCellDef="let jvocher">{{jvocher.DrAmount}}</mat-cell>-->
@@ -148,7 +149,10 @@
 
                 <ng-container matColumnDef="Amount">
                     <mat-header-cell *matHeaderCellDef  mat-sort-header>Controlled Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let jvocher">{{jvocher.ControlledAmount}}</mat-cell>
+                    <mat-cell *matCellDef="let jvocher">
+                        <span *ngIf="jvocher.CrAmount >= jvocher.DrAmount">{{jvocher.CrAmount}}</span>
+                        <span *ngIf="jvocher.DrAmount > jvocher.CrAmount">{{jvocher.DrAmount}}</span>
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Status">
