--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -48,7 +48,7 @@
                 class=" text-sm ml-1 font-medium text-green">{{user?.BranchName}}</span></span>
                 
             <span *ngIf="time" class=" text-md font-bold ml-4">Session time :<span
-                class=" text-sm ml-1 font-medium text-green">{{time}}</span></span>
+                class=" text-sm ml-1 font-medium text-green"><b>{{time}}</b></span></span>
                 
         </span>
 
@@ -94,5 +94,31 @@
 
 </div>
 
+<div class="overlay" style="z-index: 1;" *ngIf="popup">
+    <div class="popup">
+        <h2 class="heading">Session Expire ! </h2>
+        <!-- <a class="close text-red-500" (click)="popup = false">&times;</a> -->
+        <div class="content my-4">
+            <p>Your Session is going to expire within <b> {{time}}</b></p>
+            <p>Please do an action.</p>
+        </div>
+        <div class="row text-right">
+            <div class="col-lg-12">
+                <button type="button" (click)="RefreshToken()" class="btn btn-primary bg-green" mat-raised-button
+                        color="primary">
+                    <mat-icon class="mr-2">refresh</mat-icon>
+                    Refresh
+                </button>
+
+                &nbsp;
+                <button type="button" (click)="Logout()" class="btn btn-primary bg-red-500" mat-raised-button
+                        color="primary">
+                    <mat-icon class="mr-2">login</mat-icon>
+                    Logout
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Quick chat -->
 <!--<quick-chat #quickChat="quickChat"></quick-chat>-->
