--- a/src/app/modules/notification/loan-defaulters/loan-defaulters.component.html
+++ b/src/app/modules/notification/loan-defaulters/loan-defaulters.component.html
@@ -88,6 +88,13 @@
                         }}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="Caste">
+                    <mat-header-cell *matHeaderCellDef>Caste</mat-header-cell>
+                    <mat-cell *matCellDef="let notification">{{
+                        notification.Cast
+                        }}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="Address">
                     <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>
                     <mat-cell *matCellDef="let notification">{{
@@ -101,7 +108,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let notification">{{
-                        notification.KksMarkup
+                        notification.Markup
                         }}</mat-cell>
                 </ng-container>
 
@@ -148,7 +155,7 @@
 
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
-                    >loan Outstanding
+                    >Outstanding Loan
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let notification">{{
